code refactoring, adding modal for error message

--- a/SocialliZ-webapp/src/components/Layout/Layout.css
+++ b/SocialliZ-webapp/src/components/Layout/Layout.css
@@ -5,13 +5,13 @@
   top: 0;
 }
 
-.content {
+.body-content {
   margin-top: 3.5rem;
   padding: 1rem;
 }
 
 @media (min-width: 768px) {
-  .content {
+  .body-content {
     margin-top: 3.5rem;
     padding: 1rem 2rem;
   }
