--- a/SocialliZ-webapp/src/components/Modal/Modal.css
+++ b/SocialliZ-webapp/src/components/Modal/Modal.css
@@ -1,4 +1,4 @@
-.modal {
+.modal__general {
   position: fixed;
   width: 90%;
   left: 5%;
@@ -33,7 +33,7 @@
 }
 
 @media (min-width: 768px) {
-  .modal {
+  .modal__general {
     width: 40rem;
     left: calc((100% - 40rem) / 2);
   }
